# OpenDwarf

./: .gitignore  .gitmodules  CLAUDE.md  NORTHSTAR.md  RESEARCH.md  ROADMAP.md  pyproject.toml
docs/: DF_SCHEMA_NOTES.md
evals/: README.md  offline.py  predicates.py  review.py  run.py  scenario.py
evals/scenarios/: buy-item.yaml  grind-3-levels.yaml  patrol-overnight.yaml  wolf-survival.yaml
goals/: active_goals.json  identity.json
lua_scripts/: OpenDwarf--check-ids.lua  opendwarf--act.lua  opendwarf--clickok.lua  opendwarf--drainpopups.lua  opendwarf--map.lua  opendwarf--resolve-site.lua  opendwarf--screen.lua  opendwarf--state.lua  opendwarf--ui.lua
memory/: df_mechanics.md  scratchpad.md
memory/knowledge/: INDEX.md  demons.md  descent.md  (+2 more)
opendwarf/: dev.py  main.py  observability.py
scripts/: bridge_reply.py  bridge_wait.py
spatial/: chunks.json
tests/: _fakes.py  test_asked_topics.py  test_ban_enforcement.py  test_behaviors.py  test_combat.py  test_combat_strike.py  test_consume_action.py  test_conversation_choices.py  test_conversation_guard.py  test_converse_skill.py  test_curriculum.py  test_death.py  test_escalation.py  test_evals_predicates.py  test_evals_review.py  test_fast_travel.py  test_grind_combat.py  test_journey_behavior.py  test_knowledge.py  test_lifecycle.py  test_m5.py  test_offline_eval.py  test_pathfinder_ramps.py  test_plan_steps.py  test_policy.py  test_press_escape_hatch.py  test_sim_actions.py  test_sim_executor.py  test_sim_record.py  test_site_registry.py  test_spatial.py  test_summary_budget.py  test_survival.py
(+68 files in other folders)
