[project]
name = "opendwarf"
version = "0.1.0"
description = "AI agent that autonomously plays Dwarf Fortress via DFHack"
requires-python = ">=3.11"
dependencies = [
    "protobuf>=5.0",
    "grpcio-tools>=1.78.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
opendwarf = "opendwarf.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
